# vacansies_parser

./: README.md  main.py  pyproject.toml
src/: VacancyManager.py  VacansiesFromAPI.py  user_interaction.py  vacancy.py
src/json_data/: data.json
